2011-10-20 Erwin Waterlander <waterlan@xs4all.nl>
	* querycp.c: Support OS/2, and Watcom C for Win32.

2011-08-22 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Added RPM_OPT_FLAGS to LDFLAGS. Required for
	  cross-platform RPM package building.

2011-08-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Home page URL: change to http://waterlan.home.xs4all.nl/dos2unix.html

2011-08-09 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3.1

2011-08-08 Julio A. Freyre-Gonzalez <jfreyreg@gmail.com>
	* Spanish translation of messages and manual.

2011-06-26 Erwin Waterlander <waterlan@xs4all.nl>
	* bugfix: dos2unix changes ownership and permissions on file.
	  When an other user (e.g. root) than the owner has write permission
	  on the input file, dos2unix changes owner, group and umask in old
	  file mode to the other user's owner, group and umask who runs
	  dos2unix. Fixed only for Unix. Thanks to Christopher Williams.
	* Keep permissions also on Windows. Use chmod() i.s.o. fchmod().

2011-06-16 Erwin Waterlander <waterlan@xs4all.nl>
	* Identical functions from dos2unix.c and unix2dos.c
	  are moved to common.c.

2011-06-15 Erwin Waterlander <waterlan@xs4all.nl>
	* Dos2unix and Unix2dos share the same language files.

2011-05-04 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix.c: Removed redundant ConvertDosToUnixOldFile().
	* unix2dos.c: Removed redundant ConvertUnixToDosOldFile().

2011-04-26 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 5.3

2011-04-23 Erwin Waterlander <waterlan@xs4all.nl>
	* Don't report an error when unlink() fails because a file
	  doesn't exist.

2011-04-13 Erwin Waterlander <waterlan@xs4all.nl>
	* Print system error when input file can't be openened.
	  For instance "Permission denied"
	* Update manuals.
	* Update translations.

2011-04-04 Erwin Waterlander <waterlan@xs4all.nl>
	* Always print and return an error when wrong command-line
	  options are used. Also in quiet mode.